force-app/main/default/objects/sugati__Price_Adjustment_History__c/sugati__Price_Adjustment_History__c.object-meta.xml
<CustomObject>
    <label>Price Adjustment History</label>
    <nameField>
        <displayFormat>PAH-{0000000}</displayFormat>
        <label>Price Adjustment History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Adjustment Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>