force-app/main/default/objects/sugati__Price_Adjustment_History__c/fields/sugati__S_PAH_Adjustment_Amount__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_PAH_Adjustment_Amount__c</fullName>
    <label>Adjustment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>