force-app/main/default/objects/sugati__Price_Adjustment_History__c/fields/sugati__S_PAH_Apply_Agency_Comm_Before_Adjust__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_PAH_Apply_Agency_Comm_Before_Adjust__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The value of the Supplier Booking Apply Agency Commission to Price Adjustment field before this change was made</description>
    <label>Apply Agency Comm Before Adjustment</label>
    <type>Checkbox</type>
</CustomField>