force-app/main/default/objects/sugati__Price_Adjustment_History__c/fields/sugati__S_PAH_Created_By_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_PAH_Created_By_Name__c</fullName>
    <description>Used for displaying CreatedBy.Name in lightning-datatable</description>
    <formula>CreatedBy.FirstName + &quot; &quot; + CreatedBy.LastName</formula>
    <label>Created By Name</label>
    <type>Text</type>
</CustomField>