force-app/main/default/objects/sugati__Price_Adjustment_History__c/fields/sugati__S_PAH_Price_Adjustment_Category__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_PAH_Price_Adjustment_Category__c</fullName>
    <label>Price Adjustment Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>