force-app/main/default/objects/sugati__Price_Adjustment_History__c/fields/sugati__S_PAH_Price_Adjustment_Detail__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_PAH_Price_Adjustment_Detail__c</fullName>
    <label>Price Adjustment Detail</label>
    <type>TextArea</type>
</CustomField>