force-app/main/default/objects/sugati__Price_Adjustment_History__c/fields/sugati__S_PAH_Recommended_Sell_Price__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_PAH_Recommended_Sell_Price__c</fullName>
    <description>The opportunity recommended sell price at the time the adjustment was created / edited.</description>
    <label>Recommended Sell Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>