force-app/main/default/objects/sugati__Price_Adjustment_History__c/fields/sugati__S_PAH_Sell_Price_Before_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_PAH_Sell_Price_Before_Adjustment__c</fullName>
    <description>The opportunity current sell price before this change was made</description>
    <label>Sell Price Before Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>