force-app/main/default/objects/sugati__Price_Adjustment_History__c/fields/sugati__S_PAH_Supplier_Booking__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_PAH_Supplier_Booking__c</fullName>
    <label>Supplier Booking</label>
    <referenceTo>sugati__Supplier_Booking__c</referenceTo>
    <relationshipLabel>Price Adjustment Histories</relationshipLabel>
    <relationshipName>Price_Adjustment_Histories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>